# real-time-rl-environments

./: .gitmodules  README.md
atari-cpp-src/: CMakeLists.txt  example.py  test.cpp
atari-cpp-src/include/: agent_interface.h  ale_interface.hpp
atari-cpp-src/src/: CMakeLists.txt  agent_interface.cpp  ale_interface.cpp  pybind_interface.cpp
